add react 17 to the project

--- a/assets/template/template.html
+++ b/assets/template/template.html
@@ -10,6 +10,9 @@
 </head>
 <body>
 <div id="root">
+    <div id="react-content">
+        <!-- this is where the react components will be rendered -->
+    </div>
     <div id="game-content">
         <!-- this is where the game canvas will be rendered -->
     </div>
